--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 <h1>COMMUNITY SCIENCE MUSEUM</h1>
 
 <div class="logo">
-    <img src="images/nøkkellogo.png" alt="the museums logo">
+    <img src="images/nøkkellogoliten.png" alt="the companys logo">
 </div>
+
 
 <p>EXPLORE TOGETHER</p>
 
