--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-    <html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" @media screen and (max-width: 800px)/>
@@ -21,14 +20,14 @@
     <img src="images/nøkkellogoliten.png" alt="the companys logo">
 </div>
 
-
-<p>EXPLORE TOGETHER</p>
+<div class="saying">
+  <p>EXPLORE TOGETHER</p>
+</div>
 
   </header>
 
   <body>
     <img src="images/index1.jpg" alt="Picture of a girl in VR-glasses"> 
-
-
   </body>
+
 </html>
