--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" @media screen and (max-width: 800px)/>
     <meta name="description" content="Community science museum" />
     <title>Community Science Museum | Home</title>
-    <link href='https://fonts.googleapis.com/css?family=Bebas Neue' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" />
   </head>
@@ -14,20 +14,26 @@
 <div class="menu">
 </div>
 
-<h1>COMMUNITY SCIENCE MUSEUM</h1>
+<div class="logoheading">
+  <h1>COMMUNITY SCIENCE MUSEUM</h1>
+</div>
 
 <div class="logo">
-    <img src="images/nøkkellogoliten.png" alt="the companys logo">
+    <img src="images/nøkkellogoliten.png" alt="the companys logo" width="10%">
 </div>
 
 <div class="saying">
   <p>EXPLORE TOGETHER</p>
 </div>
 
-  </header>
+</header>
 
-  <body>
+<body>
+
+  <div class="vrpic">
     <img src="images/index1.jpg" alt="Picture of a girl in VR-glasses"> 
-  </body>
+  </div>
+  
+</body>
 
 </html>
