--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
     <title>Community Science Museum | Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.google.com/icons?selected=Material%20Icons%20Two%20Tone%3Amenu%3A" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" />
   </head>
 
   <header>
 <div class="menu">
+</div>
+
+<div class="icons">
+  <img src="images/Icon map-museum.png" alt="museum button" width="30%">
+  <img src="images/Icon awesome-phone-alt.png" alt="phone button" width="30%">
+</div>
+
+<div class="menubutton">
+<img src="images/Icon material-menu.png" alt="menu button" width="50%">
 </div>
 
 <div class="logoheading">
@@ -22,16 +32,12 @@
     <img src="images/nøkkellogoliten.png" alt="the companys logo" width="10%">
 </div>
 
-<div class="saying">
-  <p>EXPLORE TOGETHER</p>
-</div>
-
 </header>
 
 <body>
 
   <div class="vrpic">
-    <img src="images/index1.jpg" alt="Picture of a girl in VR-glasses"> 
+    <img src="images/index3.jpg" alt="Picture of a girl in VR-glasses" width= 100%> 
   </div>
   
 </body>
