--- a/index.html
+++ b/index.html
@@ -16,13 +16,23 @@
 </div>
 
 <div class="icons">
-  <img src="images/Icon map-museum.png" alt="museum button" width="30%">
+  <img src="images/Icon map-museum.png" alt="museum button" width="30%" br >
   <img src="images/Icon awesome-phone-alt.png" alt="phone button" width="30%">
 </div>
 
 <div class="menubutton">
-<img src="images/Icon material-menu.png" alt="menu button" width="50%">
+  <img src="images/Icon material-menu.png" alt="menu button">
+  <ul>
+      <li> <a href="index.html" class="active">HOME</a> </li>
+      <li> <a href="about.html">About</a></li>
+      <li> <a href="explore.html">Explore</a> </li>
+      <li> <a href="exhibition.html">Exhibition</a> </li>
+      <li> <a href="visit.html">Visit</a></li>
+      <li> <a href="#"> Get involved</a></li>
+  </ul>
+</nav>
 </div>
+
 
 <div class="logoheading">
   <h1>COMMUNITY SCIENCE MUSEUM</h1>
