--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/styles.css" rel="stylesheet" />
   </head>
 
-  <header>
+<header>
 <div class="menu">
 </div>
 
@@ -21,19 +21,21 @@
 </div>
 
 <div class="menubutton">
-  <img src="images/Icon material-menu.png" alt="menu button">
-  <ul>
-      <li> <a href="index.html" class="active">HOME</a> </li>
-      <li> <a href="about.html">About</a></li>
-      <li> <a href="explore.html">Explore</a> </li>
-      <li> <a href="exhibition.html">Exhibition</a> </li>
-      <li> <a href="visit.html">Visit</a></li>
-      <li> <a href="#"> Get involved</a></li>
-  </ul>
-</nav>
+  <img src="images/Icon material-menu.png" alt="menu button" width="30%">
 </div>
 
+<aside class="nav-sidebar">
+  <ul>
+    <li> <a href="index.html" class="active">Home</a> </li>
+    <li> <a href="about.html">About</a></li>
+    <li> <a href="explore.html">Explore</a> </li>
+    <li> <a href="exhibition.html">Exhibition</a> </li>
+    <li> <a href="visit.html">Visit</a></li>
+    <li> <a href="#"> Get involved</a></li>
+</ul>
+</aside>
 
+ 
 <div class="logoheading">
   <h1>COMMUNITY SCIENCE MUSEUM</h1>
 </div>
@@ -49,6 +51,7 @@
   <div class="vrpic">
     <img src="images/index3.jpg" alt="Picture of a girl in VR-glasses" width= 100%> 
   </div>
+
   
 </body>
 
