--- a/index.html
+++ b/index.html
@@ -20,21 +20,15 @@
   <img src="images/Icon awesome-phone-alt.png" alt="phone button" width="30%">
 </div>
 
-<div class="menubutton">
-  <img src="images/Icon material-menu.png" alt="menu button" width="30%">
+<button class="menubtn"><img src="images/Icon material-menu.png" alt="menu icon"> 
+</button>
+<div class="dropdown-content">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="explore.html">Explore</a>
+  <a href="exhibition.html">Exhibition</a>
+  <a href="visit.html">Visit</a>
 </div>
-
-<aside class="nav-sidebar">
-  <ul>
-    <li> <a href="index.html" class="active">Home</a> </li>
-    <li> <a href="about.html">About</a></li>
-    <li> <a href="explore.html">Explore</a> </li>
-    <li> <a href="exhibition.html">Exhibition</a> </li>
-    <li> <a href="visit.html">Visit</a></li>
-    <li> <a href="#"> Get involved</a></li>
-</ul>
-</aside>
-
  
 <div class="logoheading">
   <h1>COMMUNITY SCIENCE MUSEUM</h1>
@@ -48,9 +42,7 @@
 
 <body>
 
-  <div class="vrpic">
-    <img src="images/index3.jpg" alt="Picture of a girl in VR-glasses" width= 100%> 
-  </div>
+  
 
   
 </body>
