--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
   <img src="images/Icon awesome-phone-alt.png" alt="phone button" width="30%">
 </div>
 
-<button class="menubtn"><img src="images/Icon material-menu.png" alt="menu icon"> 
-</button>
-<div class="dropdown-content">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="explore.html">Explore</a>
-  <a href="exhibition.html">Exhibition</a>
-  <a href="visit.html">Visit</a>
+<div class="dropdown">
+  <button class="menubtn"> <img src="images/Icon material-menu.png" alt="menu icon" width="55%"></button>
+  <div class="dropdown-content">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="explore.html">Explore</a>
+    <a href="exhibition.html">Exhibition</a>
+    <a href="visit.html">Visit</a>
+    <a href="#">Get involved</a>
+  </div>
 </div>
  
 <div class="logoheading">
@@ -41,6 +43,9 @@
 </header>
 
 <body>
+<div class="vrglasses">
+  <img src="images/index3.jpg" alt="A girl in VR-glasses">
+</div>
 
 </body>
 
