--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <img src="images/Icon awesome-phone-alt.png" alt="phone button" width="30%">
 </div>
 
-<div class="dropdown">
+<div class="falld">
   <button class="menubtn"> <img src="images/Icon material-menu.png" alt="menu icon" width="55%"></button>
-  <div class="dropdown-content">
+  <div class="falld-content">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="explore.html">Explore</a>
@@ -43,7 +43,7 @@
 </header>
 
 <body>
-<div class="vrglasses">
+<div class="vrpic">
   <img src="images/index3.jpg" alt="A girl in VR-glasses">
 </div>
 
