--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
   </head>
 
 <header>
-<div class="menu">
-</div>
 
 <div class="icons">
   <img src="images/Icon map-museum.png" alt="museum button" width="30%" br >
@@ -44,7 +42,7 @@
 
 <body>
 <div class="vrpic">
-  <img src="images/index3.jpg" alt="A girl in VR-glasses">
+  <img src="images/index3.jpg" alt="A girl in VR-glasses" width="100%">
 </div>
 
 </body>
