--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <button class="menubtn"> <img src="images/Icon material-menu.png" alt="menu icon" width="55%"></button>
   <div class="falld-content">
     <a href="index.html">Home</a>
-    <a href="about.html">About</a>
+    <a href="about.html">About us</a>
     <a href="explore.html">Explore</a>
     <a href="exhibition.html">Exhibition</a>
     <a href="visit.html">Visit</a>
