--- a/about.html
+++ b/about.html
@@ -19,16 +19,17 @@
 </div>
 
 <div class="falld">
-  <button class="menubtn"> <img src="images/Icon material-menu.png" alt="menu icon" width="55%"></button>
-  <div class="falld-content">
+    <button class="menubtn"> <img src="images/Icon material-menu.png" alt="menu icon" width="55%"></button>
+    <div class="falld-content">
     <a href="index.html">Home</a>
-    <a href="about.html">About us</a>
-    <a href="explore.html">Explore</a>
-    <a href="exhibition.html">Exhibition</a>
-    <a href="visit.html">Visit</a>
-    <a href="#">Get involved</a>
+      <a href="about.html">About us</a>
+      <a href="explore.html">Explore</a>
+      <a href="exhibition.html">Exhibition Spaces</a>
+      <a href="speciale.html">Special Events and Exhibitions</a>
+      <a href="visit.html">Visit</a>
+      <a href="#">Get involved</a>
+    </div>
   </div>
-</div>
  
 <div class="logoheading">
   <h1>COMMUNITY SCIENCE MUSEUM</h1>
@@ -53,6 +54,9 @@
     <button class="book">BOOK TICKETS</button>
 </div>
 
+<div class="aboutimg">
+    <img src="images/visit.png" alt="image from the museum" width="100%">
+    </div>
 
 </body>
     
