--- a/exhibition.html
+++ b/exhibition.html
@@ -21,10 +21,11 @@
 <div class="falld">
   <button class="menubtn"> <img src="images/Icon material-menu.png" alt="menu icon" width="55%"></button>
   <div class="falld-content">
-    <a href="index.html">Home</a>
+  <a href="index.html">Home</a>
     <a href="about.html">About us</a>
     <a href="explore.html">Explore</a>
-    <a href="exhibition.html">Exhibition</a>
+    <a href="exhibition.html">Exhibition Spaces</a>
+    <a href="speciale.html">Special Events and Exhibitions</a>
     <a href="visit.html">Visit</a>
     <a href="#">Get involved</a>
   </div>
