--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 </div>
 
 <div class="aboutimg">
-    <img src="images/visit.png" alt="image from the museum" width="100%">
+    <img src="images/about.png" alt="image from the museum" width="100%">
     </div>
 
 </body>
