--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="falld">
   <button class="menubtn"> <img src="images/Icon material-menu.png" alt="menu icon" width="55%"></button>
   <div class="falld-content">
-  <a href="index.html">Home</a>
+  <a class="current" href="index.html">Home</a>
     <a href="about.html">About us</a>
     <a href="explore.html">Explore</a>
     <a href="exhibition.html">Exhibition Spaces</a>
