--- a/visit.html
+++ b/visit.html
@@ -26,7 +26,7 @@
       <a href="explore.html">Explore</a>
       <a href="exhibition.html">Exhibition Spaces</a>
       <a href="speciale.html">Special Events and Exhibitions</a>
-      <a href="visit.html">Visit</a>
+      <a class="current" href="visit.html">Visit</a>
       <a href="#">Get involved</a>
     </div>
   </div>
