--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <button class="menubtn"> <img src="images/Icon material-menu.png" alt="menu icon" width="55%"></button>
     <div class="falld-content">
     <a href="index.html">Home</a>
-      <a href="about.html">About us</a>
+      <a class="current" href="about.html">About us</a>
       <a href="explore.html">Explore</a>
       <a href="exhibition.html">Exhibition Spaces</a>
       <a href="speciale.html">Special Events and Exhibitions</a>
