--- a/exhibition.html
+++ b/exhibition.html
@@ -24,7 +24,7 @@
   <a href="index.html">Home</a>
     <a href="about.html">About us</a>
     <a href="explore.html">Explore</a>
-    <a href="exhibition.html">Exhibition Spaces</a>
+    <a class="current" href="exhibition.html">Exhibition Spaces</a>
     <a href="speciale.html">Special Events and Exhibitions</a>
     <a href="visit.html">Visit</a>
     <a href="#">Get involved</a>
