--- a/explore.html
+++ b/explore.html
@@ -23,7 +23,7 @@
   <div class="falld-content">
   <a href="index.html">Home</a>
     <a href="about.html">About us</a>
-    <a href="explore.html">Explore</a>
+    <a class="current" href="explore.html">Explore</a>
     <a href="exhibition.html">Exhibition Spaces</a>
     <a href="speciale.html">Special Events and Exhibitions</a>
     <a href="visit.html">Visit</a>
