--- a/explore.html
+++ b/explore.html
@@ -43,6 +43,7 @@
 
 <body>
 <div class="exptext">
+  <h1>EXPLORE</h1>
     <p>
     FOR KIDS<br>
     Are you a young person looking to learn more about science? 
