--- a/speciale.html
+++ b/speciale.html
@@ -24,8 +24,8 @@
     <a href="index.html">Home</a>
     <a href="about.html">About us</a>
     <a href="explore.html">Explore</a>
-    <a class="current" href="exhibition.html">Exhibition Spaces</a>
-    <a href="speciale.html">Special Events and Exhibitions</a>
+    <a href="exhibition.html">Exhibition Spaces</a>
+    <a class="current" href="speciale.html">Special Events and Exhibitions</a>
     <a href="visit.html">Visit</a>
     <a href="#">Get involved</a>
   </div>
