--- a/visit.html
+++ b/visit.html
@@ -42,7 +42,34 @@
 </header>
 
 <body>
+<div class="visitimg">
+  <img src="images/visit.png" alt="picture of the museums inside" width=100%>
+</div>
 
+<div class="hourtext">
+  <p>HOURS:<br>
+  Monday : Closed<br>
+  Tuesday: 10:00 - 16:00<br>
+  Wednesday: 10:00 - 16:00<br>
+  Thursday: 10:00 - 16:00<br>
+  Friday: 10:00 - 19:00<br>
+  Saturday: 09:00 - 16:00<br>
+  Sunday: 09:00 - 13:00
+  </p>
+</div>
+
+<div class="visittext">
+<p>
+  There are guided tours of the museum that leave every hour.
+  These tours are 70 NOK per person and include a handy printed guide of the museum.
+  <br>
+  If you like to organize a guided tour for your group of 6 or more, please contact us to arrange the tour.
+</p>
+</div>
+
+
+
+</div>
 </body>
     
 </html>
