--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@
 <body>
     
 <div class="abouttext">
+  <h1>ABOUT US</h1>
     <p>Come join us at the Community Science Museum where we’re committed to making science accessible to all.
     Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself.</p>
     <p>The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
