--- a/exhibition.html
+++ b/exhibition.html
@@ -44,6 +44,7 @@
 <body>
 
 <div class="exitext">
+<h1>EXHIBITION SPACES</h1>
 <p>
 COSMOLOGY<br>
 Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know about the universe around us. 
