--- a/visit.html
+++ b/visit.html
@@ -67,9 +67,38 @@
 </p>
 </div>
 
-
-
+<div class="locationtext">
+  <p>
+    LOCATION:<br>
+The museum is located at Kaffegata, 2270 Flisa.
+ <br><br>
+Admission:<br>
+The entrance is free for all. 
+  </p>
 </div>
+
+<div class="acctext">
+  <p>
+    ACCESSIBILITY<br>
+The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.
+  </p>
+</div>
+
+<div class="foodtext">
+  <p>
+    FOOD AND DRINK<br>
+There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.
+  </p>
+</div>
+
+<div class="shoptext">
+  <p>
+    SHOP<br>
+Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.
+  </p>
+</div>
+
+
 </body>
     
 </html>
