--- a/visit.html
+++ b/visit.html
@@ -59,6 +59,7 @@
 </div>
 
 <div class="visittext">
+<h1>VISIT</h1>
 <p>
   There are guided tours of the museum that leave every hour.
   These tours are 70 NOK per person and include a handy printed guide of the museum.
