--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" @media screen and (max-width: 800px)/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Community science museum" />
     <title>Community Science Museum | Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap" rel="stylesheet">
