--- a/speciale.html
+++ b/speciale.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" @media screen and (max-width: 800px)/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Community science museum" />
     <title>Community Science Museum | Special events and exhibition</title>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 </div>
 
 <div class="falld">
-  <button class="menubtn"> <img src="images/Icon material-menu.png" alt="menu icon" width="55%"></button>
+  <button class="menubtn"> <img src="images/Icon material-menu.png" alt="menu icon" width="100%"></button>
   <div class="falld-content">
     <a href="index.html">Home</a>
     <a href="about.html">About us</a>
