--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
 
 <div class="logo">
-    <img src="images/nøkkellogoliten.png" alt="the companys logo" width="4%">
+    <img src="images/nøkkellogoliten.png" alt="the companys logo">
 </div>
 
 </header>
