--- a/explore.html
+++ b/explore.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.google.com/icons?selected=Material%20Icons%20Two%20Tone%3Amenu%3A" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" />
   </head>
-
-  <header>
+  
+<header>
 
     <div class="icons">
       <img src="images/Icon map-museum.png" alt="museum button" width="25%" br >
@@ -21,7 +21,7 @@
     <div class="falld">
       <button class="menubtn"> <img src="images/Icon material-menu.png" alt="menu icon" width="18%"></button>
       <div class="falld-content">
-      <a href="index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About us</a>
         <a class="current" href="explore.html">Explore</a>
         <a href="exhibition.html">Exhibition Spaces</a>
@@ -36,10 +36,10 @@
     </div>
     
     <div class="logo">
-        <img src="images/nøkkellogoliten.png" alt="the companys logo" width="50%">
+        <img src="images/nøkkelferdig.png" alt="the companys logo" width="4%">
     </div>
     
-    </header>
+</header>
 
 <body>
 <div class="exptext">
