--- a/visit.html
+++ b/visit.html
@@ -46,6 +46,7 @@
   <img src="images/visit.png" alt="picture of the museums inside" width=100%>
 </div>
 
+<div class="table">
 <div class="hourtext">
   <p>HOURS:<br>
   Monday : Closed<br>
@@ -97,6 +98,7 @@ There is a café attached to the museum where you can get light lunches, soft dr
     SHOP<br>
 Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.
   </p>
+</div>
 </div>
 
 
