--- a/visit.html
+++ b/visit.html
@@ -6,7 +6,6 @@
     <meta name="description" content="Community science museum" />
     <title>Community Science Museum | Visit</title>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.google.com/icons?selected=Material%20Icons%20Two%20Tone%3Amenu%3A" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" />
   </head>
@@ -46,8 +45,8 @@
   <img src="images/visit.png" alt="picture of the museums inside" width=100%>
 </div>
 
-<div class="table">
-<div class="hourtext">
+<div class="visittext">
+  <h1>VISIT</h1>
   <p>HOURS:<br>
   Monday : Closed<br>
   Tuesday: 10:00 - 16:00<br>
@@ -57,51 +56,43 @@
   Saturday: 09:00 - 16:00<br>
   Sunday: 09:00 - 13:00
   </p>
-</div>
-
-<div class="visittext">
-<h1>VISIT</h1>
-<p>
+  <p>
   There are guided tours of the museum that leave every hour.
   These tours are 70 NOK per person and include a handy printed guide of the museum.
   <br>
   If you like to organize a guided tour for your group of 6 or more, please contact us to arrange the tour.
-</p>
-</div>
-
-<div class="locationtext">
-  <p>
-    LOCATION:<br>
-The museum is located at Kaffegata, 2270 Flisa.
- <br><br>
-Admission:<br>
-The entrance is free for all. 
   </p>
-</div>
 
-<div class="acctext">
   <p>
-    ACCESSIBILITY<br>
-The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.
+  LOCATION:<br>
+  The museum is located at Kaffegata, 2270 Flisa.
+   <br><br>
+  Admission:<br>
+  The entrance is free for all. 
   </p>
-</div>
 
-<div class="foodtext">
   <p>
-    FOOD AND DRINK<br>
-There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.
+  ACCESSIBILITY<br>
+  The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.
   </p>
-</div>
 
-<div class="shoptext">
+  <p>
+  FOOD AND DRINK<br>
+  There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.
+  </p>
+
   <p>
     SHOP<br>
-Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.
+  Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.
   </p>
-</div>
+
 </div>
 
 
 </body>
+
+<footer>
+  
+</footer>
     
 </html>
