--- a/exhibition.html
+++ b/exhibition.html
@@ -80,5 +80,9 @@ In our ecology section of the museum, we unpack the dangers we currently face in
 <img src="images/exhibspace.png" alt="background picture. White with black stripes/lines" width="100%">
 </div>
 </body>
+
+<footer>
+  <p>Copyright</p>
+</footer>
     
 </html>
