--- a/speciale.html
+++ b/speciale.html
@@ -66,4 +66,8 @@ On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is 
 
 </body>
 
+<footer>
+  <p>Copyright</p>
+</footer>
+
 </html>
