--- a/index.html
+++ b/index.html
@@ -6,51 +6,76 @@
     <meta name="description" content="Community science museum" />
     <title>Community Science Museum | Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.google.com/icons?selected=Material%20Icons%20Two%20Tone%3Amenu%3A" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/3ca04481c9.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Seaweed+Script&display=swap" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" />
   </head>
 
-<header>
 
-<div class="icons">
-  <img src="images/Icon map-museum.png" alt="museum button" width="25%" br >
-  <img src="images/Icon awesome-phone-alt.png" alt="phone button" width="25%">
-</div>
+<body>
 
-<div class="falld">
-  <button class="menubtn"> <img src="images/Icon material-menu.png" alt="menu icon" width="18%"></button>
-  <div class="falld-content">
-  <a class="current" href="index.html">Home</a>
-    <a href="about.html">About us</a>
-    <a href="explore.html">Explore</a>
-    <a href="exhibition.html">Exhibition Spaces</a>
-    <a href="speciale.html">Special Events and Exhibitions</a>
-    <a href="visit.html">Visit</a>
-    <a href="#">Get involved</a>
+<header> 
+
+  <div class="logoheading">
+    <h1>COMMUNITY SCIENCE MUSEUM</h1>
+    
   </div>
-</div>
- 
-<div class="logoheading">
-  <h1>COMMUNITY SCIENCE MUSEUM</h1>
+
+  <div class="logobox">
+    <img src="images/nøkkelferdig.png" class="logo" alt="the companys logo">
 </div>
 
-<div class="logo">
-    <img src="images/nøkkelferdig.png" alt="the companys logo" width="4%">
+<div class="topnav" id="myTopnav">
+  <a href="index.html" class="active">Home</a>
+  <a href="about.html">About us</a>
+  <a href="explore.html">Explore</a>
+  <a href="exhibition.html">Exhibitions Spaces</a>
+  <a href="speciale.html">Special Events and Exhibitions</a>
+  <a href="visit.html">Visit</a>
+  <a href="#">Get involved</a>
+  <a href="javascript:" class="icon" onclick="myHamBtn()">
+  <i class="fa fa-bars"></i></a>
+  <a href="javascript:void(0);" class="iconsearch" onclick="">
+  <i class="fa fa-search"></i></a>
 </div>
 
 </header>
 
-<body>
-
+<main>
   
 <div class="vrpic">
   <img src="images/index3.jpg" alt="A girl in VR-glasses" width="100%">
 </div>
 
+<div class="call2">
+<button class="call2action">Check out our museum</button>
+</div>
+
+</main>
+
+<div class="footer-design">
+  <footer>
+      <div class="social">
+          <a href="#"><i class="icon ion-social-instagram"></i></a>
+          <a href="#"><i class="icon ion-social-snapchat"></i></a>
+          <a href="#"><i class="icon ion-social-facebook"></i></a>
+      </div>
+      <ul class="list-inline">
+          <li class="list-inline-item"><a href="index.html">Home</a></li>
+          <li class="list-inline-item"><a href="about.html">About us</a></li>
+          <li class="list-inline-item"><a href="explore.html">Explore</a></li>
+          <li class="list-inline-item"><a href="exhibition.html">Exhibitions Spaces</a></li>
+          <li class="list-inline-item"><a href="speciale.html">Special Events and Exhibitions</a></li>
+          <li class="list-inline-item"><a href="visit.html">Visit</a></li>
+          <li class="list-inline-item"><a href="#">Get involved</a></li>
+      </ul>
+      <p class="copyright">Science Museum © 2022</p>
+  </footer>
+
+<script src="js/myHamBtn.js"></script>
+
 </body>
-
-<footer>
-  <p>Copyright</p>
-</footer>
-
 </html>
