--- a/exhibition.html
+++ b/exhibition.html
@@ -30,10 +30,10 @@
 </div>
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
+  <a href="index.html">Home</a>
   <a href="about.html">About us</a>
   <a href="explore.html">Explore</a>
-  <a href="exhibition.html">Exhibitions Spaces</a>
+  <a href="exhibition.html"class="active">Exhibitions Spaces</a>
   <a href="speciale.html">Special Events and Exhibitions</a>
   <a href="visit.html">Visit</a>
   <a href="#">Get involved</a>
@@ -82,10 +82,27 @@ In our ecology section of the museum, we unpack the dangers we currently face in
 <div class="exhibitionimg">
 <img src="images/exhibspace.png" alt="background picture. White with black stripes/lines" width="100%">
 </div>
-</body>
 
-<footer>
-  <p>Copyright</p>
-</footer>
-    
+
+<div class="footer-design">
+  <footer>
+      <div class="social">
+          <a href="#"><i class="icon ion-social-instagram"></i></a>
+          <a href="#"><i class="icon ion-social-snapchat"></i></a>
+          <a href="#"><i class="icon ion-social-facebook"></i></a>
+      </div>
+      <ul class="list-inline">
+          <li class="list-inline-item"><a href="index.html">Home</a></li>
+          <li class="list-inline-item"><a href="about.html">About us</a></li>
+          <li class="list-inline-item"><a href="explore.html">Explore</a></li>
+          <li class="list-inline-item"><a href="exhibition.html">Exhibitions Spaces</a></li>
+          <li class="list-inline-item"><a href="speciale.html">Special Events and Exhibitions</a></li>
+          <li class="list-inline-item"><a href="visit.html">Visit</a></li>
+          <li class="list-inline-item"><a href="#">Get involved</a></li>
+      </ul>
+      <p class="copyright">Science Museum © 2022</p>
+  </footer>
+</div>
+
+</body>
 </html>
