--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/3ca04481c9.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Seaweed+Script&display=swap" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" />
   </head>
 
@@ -46,11 +45,8 @@
 
 <main>
   
-<div class="vrpic">
-  <img src="images/index3.jpg" alt="A girl in VR-glasses" width="100%">
-</div>
-
-<div class="call2">
+<div class="containerindex">
+  <img src="images/index3.jpg" class="vrpic" alt="designed pictures of a boy in vr-glasses">
 <button class="call2action">Check out our museum</button>
 </div>
 
@@ -58,11 +54,6 @@
 
 <div class="footer-design">
   <footer>
-      <div class="social">
-          <a href="#"><i class="icon ion-social-instagram"></i></a>
-          <a href="#"><i class="icon ion-social-snapchat"></i></a>
-          <a href="#"><i class="icon ion-social-facebook"></i></a>
-      </div>
       <ul class="list-inline">
           <li class="list-inline-item"><a href="index.html">Home</a></li>
           <li class="list-inline-item"><a href="about.html">About us</a></li>
@@ -74,6 +65,7 @@
       </ul>
       <p class="copyright">Science Museum © 2022</p>
   </footer>
+</div>
 
 <script src="js/myHamBtn.js"></script>
 
