--- a/visit.html
+++ b/visit.html
@@ -29,12 +29,12 @@
 </div>
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
+  <a href="index.html">Home</a>
   <a href="about.html">About us</a>
   <a href="explore.html">Explore</a>
   <a href="exhibition.html">Exhibitions Spaces</a>
   <a href="speciale.html">Special Events and Exhibitions</a>
-  <a href="visit.html">Visit</a>
+  <a href="visit.html" class="active">Visit</a>
   <a href="#">Get involved</a>
   <a href="javascript:" class="icon" onclick="myHamBtn()">
   <i class="fa fa-bars"></i></a>
@@ -91,7 +91,25 @@
 
 </div>
 
-
+<div class="footer-design">
+  <footer>
+      <div class="social">
+          <a href="#"><i class="icon ion-social-instagram"></i></a>
+          <a href="#"><i class="icon ion-social-snapchat"></i></a>
+          <a href="#"><i class="icon ion-social-facebook"></i></a>
+      </div>
+      <ul class="list-inline">
+          <li class="list-inline-item"><a href="index.html">Home</a></li>
+          <li class="list-inline-item"><a href="about.html">About us</a></li>
+          <li class="list-inline-item"><a href="explore.html">Explore</a></li>
+          <li class="list-inline-item"><a href="exhibition.html">Exhibitions Spaces</a></li>
+          <li class="list-inline-item"><a href="speciale.html">Special Events and Exhibitions</a></li>
+          <li class="list-inline-item"><a href="visit.html">Visit</a></li>
+          <li class="list-inline-item"><a href="#">Get involved</a></li>
+      </ul>
+      <p class="copyright">Science Museum © 2022</p>
+  </footer>
+</div>
 
 </body>    
 </html>
