--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
 </div>
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
-  <a href="about.html">About us</a>
+  <a href="index.html">Home</a>
+  <a href="about.html"class="active">About us</a>
   <a href="explore.html">Explore</a>
   <a href="exhibition.html">Exhibitions Spaces</a>
   <a href="speciale.html">Special Events and Exhibitions</a>
@@ -43,9 +43,6 @@
 </div>
 
 </header>
-
-
-<body>
     
 <div class="abouttext">
   <h1>ABOUT US</h1>
@@ -60,13 +57,30 @@
 </div>
 
 <div class="aboutimg">
-    <img src="images/about.png" alt="image from the museum" width="100%">
     </div>
 
-</body>
+    <div class="footer-design">
+      <footer>
+          <div class="social">
+              <a href="#"><i class="icon ion-social-instagram"></i></a>
+              <a href="#"><i class="icon ion-social-snapchat"></i></a>
+              <a href="#"><i class="icon ion-social-facebook"></i></a>
+          </div>
+          <ul class="list-inline">
+              <li class="list-inline-item"><a href="index.html">Home</a></li>
+              <li class="list-inline-item"><a href="about.html">About us</a></li>
+              <li class="list-inline-item"><a href="explore.html">Explore</a></li>
+              <li class="list-inline-item"><a href="exhibition.html">Exhibitions Spaces</a></li>
+              <li class="list-inline-item"><a href="speciale.html">Special Events and Exhibitions</a></li>
+              <li class="list-inline-item"><a href="visit.html">Visit</a></li>
+              <li class="list-inline-item"><a href="#">Get involved</a></li>
+          </ul>
+          <p class="copyright">Science Museum © 2022</p>
+      </footer>
+    </div>
 
-<footer>
-  <p>Copyright</p>
-</footer>
-    
+
+
+
+</body>    
 </html>
