--- a/explore.html
+++ b/explore.html
@@ -29,9 +29,9 @@
 </div>
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
+  <a href="index.html">Home</a>
   <a href="about.html">About us</a>
-  <a href="explore.html">Explore</a>
+  <a href="explore.html"class="active">Explore</a>
   <a href="exhibition.html">Exhibitions Spaces</a>
   <a href="speciale.html">Special Events and Exhibitions</a>
   <a href="visit.html">Visit</a>
@@ -77,10 +77,20 @@
   <img src="images/explore.jpg" alt="a pilot in action" width="100%">
 </div>
     
+
+  <footer class="footer-design">
+      <ul class="list-inline">
+          <li class="list-inline-item"><a href="index.html">Home</a></li>
+          <li class="list-inline-item"><a href="about.html">About us</a></li>
+          <li class="list-inline-item"><a href="explore.html">Explore</a></li>
+          <li class="list-inline-item"><a href="exhibition.html">Exhibitions Spaces</a></li>
+          <li class="list-inline-item"><a href="speciale.html">Special Events and Exhibitions</a></li>
+          <li class="list-inline-item"><a href="visit.html">Visit</a></li>
+          <li class="list-inline-item"><a href="#">Get involved</a></li>
+      </ul>
+      <p class="copyright">Science Museum © 2022</p>
+  </footer>
+
+
 </body>
-
-<footer>
-  <p>Copyright</p>
-</footer>
-
 </html>
