--- a/about.html
+++ b/about.html
@@ -53,10 +53,11 @@
     Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).
     </p>
     
-    <button class="book">BOOK TICKETS</button>
+    <button class="btn">BOOK TICKETS</button>
 </div>
 
 <div class="aboutimg">
+  <img src="images/about.jpg" class="about">
     </div>
 
     <div class="footer-design">
