--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
 <header> 
 
   <div class="logoheading">
+    <a href="index.html">
+    <img src="images/nøkkelferdig.png" class="logo" alt="the companys logo"></a>
     <h1>COMMUNITY SCIENCE MUSEUM</h1>
-    
   </div>
 
-  <div class="logobox">
-    <img src="images/nøkkelferdig.png" class="logo" alt="the companys logo">
-</div>
+
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
+  <a href="index.html" class="active">home</a>
   <a href="about.html">About us</a>
   <a href="explore.html">Explore</a>
   <a href="exhibition.html">Exhibitions Spaces</a>
@@ -41,13 +40,15 @@
   <i class="fa fa-search"></i></a>
 </div>
 
+
 </header>
 
 <main>
   
 <div class="containerindex">
   <img src="images/index3.jpg" class="vrpic" alt="designed pictures of a boy in vr-glasses">
-<button class="call2action">Check out our museum</button>
+  <a href="explore.html">
+  <button class="call2action">Check out our museum</button></a>
 </div>
 
 </main>
