--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
   <div class="logoheading">
     <a href="index.html">
-    <img src="images/nøkkelferdig.png" class="logo" alt="the companys logo"></a>
-    <h1>COMMUNITY SCIENCE MUSEUM</h1>
+    <img src="images/minnøkkel1.png" class="logo" alt="the companys logo">
+    <h1 class="logo-head">COMMUNITY SCIENCE MUSEUM</h1>
+  </a>
   </div>
 
 
@@ -30,8 +31,8 @@
   <a href="index.html" class="active">home</a>
   <a href="about.html">About us</a>
   <a href="explore.html">Explore</a>
-  <a href="exhibition.html">Exhibitions Spaces</a>
-  <a href="speciale.html">Special Events and Exhibitions</a>
+  <a href="exhibition.html">Exhibitions</a>
+  <a href="speciale.html">Special Events</a>
   <a href="visit.html">Visit</a>
   <a href="#">Get involved</a>
   <a href="javascript:" class="icon" onclick="myHamBtn()">
