--- a/about.html
+++ b/about.html
@@ -17,23 +17,23 @@
 
 <body>
 
-<header> 
+<<header> 
 
   <div class="logoheading">
-    <h1>COMMUNITY SCIENCE MUSEUM</h1>
-    
+    <a href="index.html">
+    <img src="images/minnøkkel1.png" class="logo" alt="the companys logo">
+    <h1 class="logo-head">COMMUNITY SCIENCE MUSEUM</h1>
+  </a>
   </div>
 
-  <div class="logobox">
-    <img src="images/nøkkelferdig.png" class="logo" alt="the companys logo">
-</div>
+
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html">Home</a>
+  <a href="index.html">home</a>
   <a href="about.html"class="active">About us</a>
   <a href="explore.html">Explore</a>
-  <a href="exhibition.html">Exhibitions Spaces</a>
-  <a href="speciale.html">Special Events and Exhibitions</a>
+  <a href="exhibition.html">Exhibitions</a>
+  <a href="speciale.html">Special Events</a>
   <a href="visit.html">Visit</a>
   <a href="#">Get involved</a>
   <a href="javascript:" class="icon" onclick="myHamBtn()">
@@ -41,6 +41,7 @@
   <a href="javascript:void(0);" class="iconsearch" onclick="">
   <i class="fa fa-search"></i></a>
 </div>
+
 
 </header>
     
