--- a/speciale.html
+++ b/speciale.html
@@ -44,21 +44,30 @@
   
   
   </header>
-  
+<main>
+
+
+
+  <h1>NEWS</h1> 
+
+  <div class="newimg">
+    <img src="images/scott-webb-102825.jpg" class="newsimage" alt="">
+  </div>
+
 <div class="newstext">
-<h1>NEWS</h1>
+
+ <h2>VISITING PROFESSOR OF AERONAUTICS</h2> 
 <p>
-Visiting Professor of Aeronautics<br>
 It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.
 </p>
 
-<p>
-Night in the Museum<br>
-Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.    
+
+<h2>NIGHT IN THE MUSEUM</h2>
+<p>Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.    
 </p>
 
+<h2>ENERGETICA EXHIBITION ON LOAN</h2>
 <p>
-Energetica Exhibition on Loan<br>
 On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.
 </p>
 </div>
@@ -67,6 +76,7 @@ On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is 
 <img src="images/speciale.png" alt="Background picture of a human with open organs" width="100%">
 </div>
 
+</main>
 
 <div class="footer-design">
   <footer>
