--- a/visit.html
+++ b/visit.html
@@ -15,7 +15,7 @@
   </head>
 
 
-<body>
+<body>  
 
   <header> 
 
@@ -44,6 +44,8 @@
   
   
   </header>
+
+<main>
 
 <div class="visitimg">
   <img src="images/visit.png" alt="picture of the museums inside" width=100%>
@@ -91,6 +93,8 @@
   </p>
 
 </div>
+
+</main>
 
 <div class="footer-design">
   <footer>
