--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
 <body>
 
-<<header> 
+<header> 
 
   <div class="logoheading">
     <a href="index.html">
@@ -44,15 +44,13 @@
 
 
 </header>
-    
+
+<main>
+
 <div class="abouttext">
   <h1>ABOUT US</h1>
     <p>Come join us at the Community Science Museum where we’re committed to making science accessible to all.
     Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself.</p>
-    <p>The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
-    <p>We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have over 1000 different exhibits on the many varied subjects of science to explore. 
-    Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).
-    </p>
     
     <button class="btn">BOOK TICKETS</button>
 </div>
@@ -60,6 +58,23 @@
 <div class="aboutimg">
   <img src="images/about.jpg" class="about">
     </div>
+
+    <div class="abouttext">
+      <p>The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
+    </div>
+
+<div class="aboutimg">
+  <img src="images/visit.jpg" class="about">
+</div>
+
+
+<div class="abouttext">
+  <p>We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have over 1000 different exhibits on the many varied subjects of science to explore. 
+    Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).
+    </p>
+</div>
+
+</main>
 
     <div class="footer-design">
       <footer>
