--- a/speciale.html
+++ b/speciale.html
@@ -47,13 +47,15 @@
 <main>
 
 
-
+<hr>
   <h1>NEWS</h1> 
+<hr>
 
   <div class="newimg">
     <img src="images/scott-webb-102825.jpg" class="newsimage" alt="">
   </div>
 
+  <hr>
 <div class="newstext">
 
  <h2>VISITING PROFESSOR OF AERONAUTICS</h2> 
@@ -71,12 +73,15 @@ It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts I
 On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.
 </p>
 </div>
+<hr>
+
 
 <div class=imghuman>
-<img src="images/speciale.png" alt="Background picture of a human with open organs" width="100%">
+<img src="images/speciale.png" alt="Background picture of a human with open organs" class="newsimg">
 </div>
 
 </main>
+
 
 <div class="footer-design">
   <footer>
