--- a/visit.html
+++ b/visit.html
@@ -47,14 +47,14 @@
 
 <main>
 
-<div class="visitimg">
-  <img src="images/visit.png" alt="picture of the museums inside" width=100%>
-</div>
+
+<h1>VISIT</h1>
+
 
 <div class="visittext">
-  <h1>VISIT</h1>
-  <p>HOURS:<br>
-  Monday : Closed<br>
+  <hr>
+  <h2>HOURS</h2>
+ <p> Monday : Closed<br>
   Tuesday: 10:00 - 16:00<br>
   Wednesday: 10:00 - 16:00<br>
   Thursday: 10:00 - 16:00<br>
@@ -63,38 +63,46 @@
   Sunday: 09:00 - 13:00
   </p>
   <p>
-  There are guided tours of the museum that leave every hour.
-  These tours are 70 NOK per person and include a handy printed guide of the museum.
-  <br>
-  If you like to organize a guided tour for your group of 6 or more, please contact us to arrange the tour.
+  There are guided tours of the museum that leave every hour.</p>
+  <p>These tours are 70 NOK per person and include a handy printed guide of the museum.</p>
+  <p>  If you like to organize a guided tour for your group of 6 or more, please contact us to arrange the tour.
+  </p>
+<hr>
+  <h2>
+  LOCATION:</h2>
+  <p>The museum is located at Kaffegata, 2270 Flisa.</p>
+  
+<hr>
+  <h2>Admission:</h2>
+  <p>The entrance is free for all. </p>
+
+  <hr>
+  <h2>
+  ACCESSIBILITY</h2>
+  <p>The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.
   </p>
 
-  <p>
-  LOCATION:<br>
-  The museum is located at Kaffegata, 2270 Flisa.
-   <br><br>
-  Admission:<br>
-  The entrance is free for all. 
+  <hr>
+  <h2>
+  FOOD AND DRINK</h2>
+  <p>There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.
   </p>
 
-  <p>
-  ACCESSIBILITY<br>
-  The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.
+  <hr>
+  <h2>SHOP</h2>
+ <p> Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.
   </p>
-
-  <p>
-  FOOD AND DRINK<br>
-  There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.
-  </p>
-
-  <p>
-    SHOP<br>
-  Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.
-  </p>
+<hr>>
 
 </div>
 
+<div class="visitimg">
+  <img src="images/visit.png" alt="picture of the museums inside" width=100%>
+</div>
+
+
 </main>
+
 
 <div class="footer-design">
   <footer>
