--- a/speciale.html
+++ b/speciale.html
@@ -103,5 +103,8 @@ On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is 
   </footer>
 </div>
 
+
+<script src="js/myHamBtn.js"></script>
+
 </body>
 </html>
