--- a/exhibition.html
+++ b/exhibition.html
@@ -89,8 +89,14 @@ The information revolution is here and robotics and artificial intelligence are 
 As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how to create a sustainable future not just for humans but for the whole planet.
 In our ecology section of the museum, we unpack the dangers we currently face including global warming, extinction of species, and pollution. But we also focus on the positive ways we can all contribute to a brighter future.
 </p>
+
 </div>
 <hr>
+<br>
+
+<div class="buttonalign">
+<button class="btn">BUY TICKETS</button>
+</div>
 
 </main>
 
@@ -114,6 +120,9 @@ In our ecology section of the museum, we unpack the dangers we currently face in
       <p class="copyright">Science Museum © 2022</p>
   </footer>
 </div>
+
+
+<script src="js/myHamBtn.js"></script>
 
 </body>
 </html>
