--- a/explore.html
+++ b/explore.html
@@ -55,7 +55,7 @@
   <div class="exptext">
     
 <div class="expclass">
-  <img src="images/celso-405219.jpg" alt="planets on a line" class="exstartimg">
+  <img src="images/visit.jpg" alt="planets on a line" class="exstartimg">
 </div>
 
 <hr>
@@ -73,6 +73,8 @@
     During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, send us a message.
     </p>
 </div>
+
+<button class="btn">BUY TICKETS</button>
 <hr>
 
 <div class="expclass">
@@ -89,6 +91,7 @@
       Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.
     </p>
   </div>
+  <button class="btn">BUY TICKETS</button>
 
   <hr>
    
@@ -102,10 +105,16 @@
 
   <div class="exptext">
     <h2>FOR RESEARCHERS</h2>
-    <p>
-    Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country.
+    <p>Are you looking to get involved with our team of researchers
+       and academics? Our museum offers various ways for you to use
+      our resources and contribute towards them. We have online records,
+      laboratory space, and a working relationship with a number of universities
+       around the country.
     </p>
+    <button class="btn">BUY TICKETS</button>
   </div>
+
+
 <hr>
 
   <div class="expclass">
@@ -128,6 +137,8 @@
       <p class="copyright">Science Museum © 2022</p>
   </footer>
 
+
+  <script src="js/myHamBtn.js"></script>
 
 </body>
 </html>
