--- a/visit.html
+++ b/visit.html
@@ -69,13 +69,13 @@
   </p>
 <hr>
   <h2>
-  LOCATION:</h2>
+  LOCATION</h2>
   <p>The museum is located at Kaffegata, 2270 Flisa.</p>
   
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15664.46117888367!2d11.99791885540712!3d60.60921610598022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46420d92d9648f9b%3A0xddb83148a21105c8!2s2270%20Flisa!5e0!3m2!1sno!2sno!4v1646941098280!5m2!1sno!2sno"  allowfullscreen="" loading="lazy" class="map"></iframe>
 
 <hr>
-  <h2>Admission:</h2>
+  <h2>ADMISSION</h2>
   <p>The entrance is free for all. </p>
 
   <hr>
@@ -85,8 +85,7 @@
   </p>
 
   <hr>
-  <h2>
-  FOOD AND DRINK</h2>
+  <h2>FOOD AND DRINKS</h2>
   <p>There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.
   </p>
 
